more fruits coming

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h2>Red meat and vegetables</h2>
+    <p>Added Beef meat</p>
+    <p>Added Mutton meat</p>
+    <p>Added Tomatoes and more vegetables and also fruits</p>
+    <p>more things are coming soon</p>
+
 </body>
 </html>
